lighthouse pwa tweaks and readme update.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Simple and immersive one-click mood logging."
     />
+    <meta name="theme-color" content="#94A3B8" />
     <title>mood.</title>
   </head>
   <body>
