--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     />
     <meta name="theme-color" content="#94A3B8" />
     <title>mood.</title>
+    <link rel="preconnect" href="supabase.co" />
+    <link rel="preconnect" href="https://ecpejvpmbtlicasvhybo.supabase.co" />
   </head>
   <body>
     <div id="root"></div>
